# thermosta23

./: .justfile  Cargo.toml
robots-esp/: Cargo.toml
robots-esp/src/: main.rs
robots-lib/: Cargo.toml
robots-lib/src/: error.rs  lib.rs
robots-onoff/: Cargo.toml
robots-onoff/src/: main.rs
robots-th/: Cargo.toml
robots-th/src/: main.rs
robots-web/src/: cmd_logger.rs
