[package]
name = "robots-th"
version = "0.1.0"
edition = "2021"

[dependencies]
robots-drv = { path = "../robots-drv" }
robots-lib = { path = "../robots-lib" }

broadcaster = "1"
bytes = "1"
futures = "0.3"
lazy_static = "1"
serialport = "4"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-serial = { version = "5", features = ["tokio-util", "bytes", "codec", "rt"] }
tokio-util = { version = "0.7", features = ["full"] }
